@@ -1,5 +1,5 @@
 <div *ngIf="preview" #alert class="alert alert-danger alert-dismissible fade show font-8 my-2 w-100" role="alert">
-    This is a preview page and will not displayed to public.
+    This is a preview page and will not displayed to public if the shop is in unpublished status.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert()">
         <span aria-hidden="true">&times;</span>
     </button>
